# pc-debugger

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: nightly-compact.yml
scripts/: auto-commit.ps1  rollback.ps1  start.ps1
workers/: __init__.py  driver.py  logs.py  network.py  processes.py
