[project]
name = "pc-debugger"
version = "0.1.0"
description = "Multi-worker PC diagnostics using Python 3.14 isolated interpreters"
requires-python = ">=3.14"
dependencies = [
    "psutil>=6.0",
    "rich>=13.0",
]

[project.scripts]
pc-debug = "main:main"

[tool.uv]
python = "3.14t"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
